<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="19529" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
    <dependencies>
        <deployment identifier="macosx"/>
        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="19529"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <objects>
        <customObject id="-2" userLabel="File's Owner" customClass="MainWindowController" customModule="Font_Smoothing_Adjuster" customModuleProvider="target">
            <connections>
                <outlet property="disabledFontSmoothingRadioButton" destination="yAH-xX-66R" id="B7B-Yy-ouv"/>
                <outlet property="enabledFontSmoothingRadioButton" destination="MXo-vC-CTB" id="8go-i9-fXM"/>
                <outlet property="window" destination="F0z-JX-Cv5" id="gIp-Ho-8D9"/>
            </connections>
        </customObject>
        <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
        <customObject id="-3" userLabel="Application" customClass="NSObject"/>
        <window title="Font Smoothing Adjuster" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" visibleAtLaunch="NO" animationBehavior="default" titlebarAppearsTransparent="YES" id="F0z-JX-Cv5">
            <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
            <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
            <rect key="contentRect" x="196" y="240" width="417" height="203"/>
            <rect key="screenRect" x="0.0" y="0.0" width="1440" height="875"/>
            <view key="contentView" misplaced="YES" id="se5-gp-TjO">
                <rect key="frame" x="0.0" y="0.0" width="418" height="203"/>
                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                <subviews>
                    <stackView distribution="fill" orientation="horizontal" alignment="top" spacing="6" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="xCM-7O-UeI">
                        <rect key="frame" x="92" y="83" width="234" height="38"/>
                        <subviews>
                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="vBp-SU-VGI">
                                <rect key="frame" x="-2" y="22" width="103" height="16"/>
                                <textFieldCell key="cell" lineBreakMode="clipping" alignment="right" title="Font smoothing:" id="3bW-X9-caa">
                                    <font key="font" metaFont="system"/>
                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                </textFieldCell>
                            </textField>
                            <stackView distribution="fill" orientation="vertical" alignment="leading" spacing="6" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="U7t-9F-cvi">
                                <rect key="frame" x="105" y="0.0" width="129" height="38"/>
                                <subviews>
                                    <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="yAH-xX-66R">
                                        <rect key="frame" x="-2" y="21" width="79" height="18"/>
                                        <buttonCell key="cell" type="radio" title="Disabled" bezelStyle="regularSquare" imagePosition="left" alignment="left" inset="2" id="ym3-OR-J9l">
                                            <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                                            <font key="font" metaFont="system"/>
                                        </buttonCell>
                                        <connections>
                                            <action selector="toggleFontSmoothing:" target="-2" id="UrR-lP-ykQ"/>
                                        </connections>
                                    </button>
                                    <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="MXo-vC-CTB">
                                        <rect key="frame" x="-2" y="-1" width="131" height="18"/>
                                        <buttonCell key="cell" type="radio" title="Enabled (default)" bezelStyle="regularSquare" imagePosition="left" alignment="left" inset="2" id="Uan-kw-Wxq">
                                            <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                                            <font key="font" metaFont="system"/>
                                        </buttonCell>
                                        <connections>
                                            <action selector="toggleFontSmoothing:" target="-2" id="Ric-3e-rix"/>
                                        </connections>
                                    </button>
                                </subviews>
                                <visibilityPriorities>
                                    <integer value="1000"/>
                                    <integer value="1000"/>
                                </visibilityPriorities>
                                <customSpacing>
                                    <real value="3.4028234663852886e+38"/>
                                    <real value="3.4028234663852886e+38"/>
                                </customSpacing>
                            </stackView>
                        </subviews>
                        <visibilityPriorities>
                            <integer value="1000"/>
                            <integer value="1000"/>
                        </visibilityPriorities>
                        <customSpacing>
                            <real value="3.4028234663852886e+38"/>
                            <real value="3.4028234663852886e+38"/>
                        </customSpacing>
                    </stackView>
                </subviews>
                <constraints>
                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="xCM-7O-UeI" secondAttribute="trailing" constant="92" id="0Jz-50-Mad"/>
                    <constraint firstItem="xCM-7O-UeI" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="se5-gp-TjO" secondAttribute="leading" constant="92" id="9kz-Eu-azC"/>
                    <constraint firstItem="xCM-7O-UeI" firstAttribute="centerY" secondItem="se5-gp-TjO" secondAttribute="centerY" id="RAD-Wn-FKq"/>
                    <constraint firstItem="xCM-7O-UeI" firstAttribute="centerX" secondItem="se5-gp-TjO" secondAttribute="centerX" id="hWk-9A-986"/>
                    <constraint firstItem="xCM-7O-UeI" firstAttribute="top" relation="greaterThanOrEqual" secondItem="se5-gp-TjO" secondAttribute="top" constant="61" id="lqp-IG-hK7"/>
                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="xCM-7O-UeI" secondAttribute="bottom" constant="61" id="uty-4G-18H"/>
                </constraints>
            </view>
            <connections>
                <outlet property="delegate" destination="-2" id="0bl-1N-AYu"/>
            </connections>
            <point key="canvasLocation" x="-131.5" y="110.5"/>
        </window>
    </objects>
</document>
